--- a/warranty.html
+++ b/warranty.html
@@ -62,53 +62,9 @@
 
 	<main>
 		<h1>
-			Интернет-магазин Device
+			Гарантия
 		</h1>
 
-		<section>
-			<h2>О нас</h2>
-
-			<p>
-				Огромный выбор гаджетов не оставит равнодушным гика,<br>
-				который есть в каждом из нас.
-			</p>
-
-			<p>
-				Мы можем доставить ваш товар в самые отдаленные точки<br>
-				России! DEVICE работает со многими транспортными компаниями:
-			</p>
-
-			<ul>
-				<li>Деловые линии</li>
-				<li>Автотрейдинг</li>
-				<li>ЖелДорЭкспедиция</li>
-			</ul>
-
-			<a href="about-us.html">
-				<button>
-					ПОДРОБНЕЕ О НАС
-				</button>
-			</a>
-		</section>
-
-		<section>
-			<h2>
-				Контакты
-			</h2>
-
-			<p>
-				Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете<br> 
-				проверить работоспособность покупки. Всякое бывает.
-			</p>
-
-			<img src="https://via.placeholder.com/150x150" alt="Карта">
-
-			<a href="write-us">
-				<button>
-					НАПИШИТЕ НАМ
-				</button>
-			</a>
-		</section>
 	</main>
 
 	<footer>
