--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
 
 			<a href="tell: +7 (495) 495-95-95">
 				+7 (495) 495-95-95
+				<!-- Добавил здесь кликабельный телефон, так как посчитал, что вроде это уже норма?) -->
 			</a>
 
 			<a href="https://htmlacademy.ru">
