--- a/monopod.html
+++ b/monopod.html
@@ -62,11 +62,116 @@
 
 	<main>
 		<h1>
-			Контакты
+			Интернет-магазин Device
 		</h1>
 
-	</main>
+		<section>
+			<h2>
+				Моноподы для селфи
+			</h2>
 
+			<ul>
+				<li>
+					<a href="index.html">
+						Главная
+					</a>
+				</li>
+
+				<li>
+					<a href="catalog.html">
+						Каталог товаров
+					</a>
+				</li>
+
+				<li>
+					<a href="monopod.html">
+						Моноподы для селфи
+					</a>
+				</li>
+			</ul>
+		</section>
+
+		<aside>
+			<form>
+				<p>Цвет</p>
+				<p>				
+					<input type="checkbox" name="black" checked="">Черный<br>
+					<input type="checkbox" name="white">Белый<br>
+					<input type="checkbox" name="blue" checked="">Синий<br>
+					<input type="checkbox" name="red" checked="">Красный<br>
+					<input type="checkbox" name="pink">Розовый<br>
+				</p>			
+			</form>
+			<form>
+				<p>
+					Bluetooth
+				</p>
+				<p>
+					<input type="radio" name="bluetooth" value="yes">Есть<br>
+					<input type="radio" name="bluetooth" value="no">Нет<br>
+				</p>
+			</form>
+			<button>
+				ПОКАЗАТЬ
+			</button>
+		</aside>
+
+		<ul>
+			<li>
+				<ul>
+					<li>
+						<img src="https://via.placeholder.com/150x150" alt="Любительская селфи-палка">
+					</li>
+					<li>
+						<p>
+							Любительская селфи-палка <span>500 руб.</span>
+						</p>
+					</li>
+
+				</ul>
+			</li>
+
+			<li>
+				<ul>
+					<li>
+						<img src="https://via.placeholder.com/150x150" alt="Профессиональная селфи-палка">
+					</li>
+					<li>
+						<p>
+							Профессиональная селфи-палка <span>1500 руб.</span>
+						</p>
+					</li>
+				</ul>
+			</li>
+
+			<li>
+				<ul>
+					<li>
+						<img src="https://via.placeholder.com/150x150" alt="Непотопляемая селфи-палка">
+					</li>
+					<li>
+						<p>
+							Непотопляемая селфи-палка <span>2500 руб.</span>
+						</p>
+					</li>
+				</ul>
+			</li>
+
+			<li>
+				<ul>
+					<li>
+						<img src="https://via.placeholder.com/150x150" alt="Селфи-палка Следуй за мной">
+					</li>
+					<li>
+						<p>
+							Селфи-палка "Следуй за мной" <span>4900 руб.</span>
+						</p>
+					</li>
+				</ul>
+			</li>
+		</ul>
+
+	</main>
 	<footer>
 		<nav>
 			<a href="index.html"><img src="https://via.placeholder.com/150x150" alt=""></a>
@@ -137,6 +242,7 @@
 			</a>
 		</nav>
 	</footer>
+
 
   </body>
 </html>
