--- a/index.html
+++ b/index.html
@@ -84,11 +84,10 @@
 				<li>ЖелДорЭкспедиция</li>
 			</ul>
 
-			<a href="about-us.html">
-				<button>
-					ПОДРОБНЕЕ О НАС
-				</button>
-			</a>
+			<button>
+				ПОДРОБНЕЕ О НАС
+			</button>
+
 		</section>
 
 		<section>
@@ -103,11 +102,9 @@
 
 			<img src="https://via.placeholder.com/150x150" alt="Карта">
 
-			<a href="write-us">
-				<button>
-					НАПИШИТЕ НАМ
-				</button>
-			</a>
+			<button>
+				НАПИШИТЕ НАМ
+			</button>
 		</section>
 	</main>
 
@@ -171,7 +168,7 @@
 				Корзина
 			</a>
 
-			<a href="tell: +7 (495) 495-95-95">
+			<a href="tel:+74954959595">
 				+7 (495) 495-95-95
 				<!-- Добавил здесь кликабельный телефон, так как посчитал, что вроде это уже норма?) -->
 			</a>
