--- a/warranty.html
+++ b/warranty.html
@@ -127,8 +127,9 @@
 				Корзина
 			</a>
 
-			<a href="tell: +7 (495) 495-95-95">
+			<a href="tel:+74954959595">
 				+7 (495) 495-95-95
+				<!-- Добавил здесь кликабельный телефон, так как посчитал, что вроде это уже норма?) -->
 			</a>
 
 			<a href="https://htmlacademy.ru">
