Правки после комментария наставника #1

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <body>
 
 	<header>
-		<nav>
 			<a href="index.html">
 				<img src="https://via.placeholder.com/150x150" alt="Логотип Device">
 			</a>
@@ -28,32 +27,31 @@
 				<a href="">
 					Корзина
 				</a>
-
+		<nav>
 			<ul>
-				<!-- Пишу капслоком, прямо как в макете, но как я понимаю,
-				что настоящая реализация будет через стили и Апперкейс? -->
+
 				<li>
 					<a href="catalog.html">
-						КАТАЛОГ ТОВАРОВ
+						каталог товаров
 					</a>
 					<input type="button">
 				</li>
 
 				<li>
 					<a href="delivery.html">
-						ДОСТАВКА
+						доставка
 					</a>
 				</li>
 
 				<li>
 					<a href="warranty.html">
-						ГАРАНТИЯ
+						гарантия
 					</a>
 				</li>
 
 				<li>
 					<a href="contacts.html">
-						КОНТАКТЫ
+						контакты
 					</a>
 				</li>
 			</ul>
@@ -84,10 +82,12 @@
 				<li>ЖелДорЭкспедиция</li>
 			</ul>
 
-			<button>
-				ПОДРОБНЕЕ О НАС
-			</button>
+			<a href="#!">
+				<p>
+					<input type="button" value="подробнее о нас">
 
+				</p>
+			</a>
 		</section>
 
 		<section>
@@ -101,21 +101,27 @@
 			</p>
 
 			<img src="https://via.placeholder.com/150x150" alt="Карта">
+			
+			<a href="#!">
+				<p>
+					<input type="button" value="напишите нам">
 
-			<button>
-				НАПИШИТЕ НАМ
-			</button>
+				</p>
+			</a>
+
 		</section>
 	</main>
 
 	<footer>
-		<nav>
+		<div>
 			<a href="index.html"><img src="https://via.placeholder.com/150x150" alt=""></a>
 
 			<address>
 				г. Москва, ул. Строителей, 15
 			</address>
+		</div>
 
+		<div>
 			<ul>
 				<li>
 					<a href="delivery.html">
@@ -155,7 +161,9 @@
 					</a>
 				</li>
 			</ul>
+		</div>
 
+		<div>
 			<a href="">
 				Войти
 			</a>
@@ -176,7 +184,7 @@
 			<a href="https://htmlacademy.ru">
 				<img src="https://via.placeholder.com/150x150" alt="Перейти на сайт Академии">
 			</a>
-		</nav>
+		</div>
 	</footer>
 
   </body>
