--- a/monopod.html
+++ b/monopod.html
@@ -91,86 +91,66 @@
 			</ul>
 		</section>
 
-		<aside>
+		<section>
 			<form>
-				<p>Цвет</p>
-				<p>				
-					<input type="checkbox" name="black" checked="">Черный<br>
-					<input type="checkbox" name="white">Белый<br>
-					<input type="checkbox" name="blue" checked="">Синий<br>
-					<input type="checkbox" name="red" checked="">Красный<br>
-					<input type="checkbox" name="pink">Розовый<br>
-				</p>			
+				<fieldset>
+					<legend>Цвет</legend>
+					<label>Черный<input type="checkbox" name="black" checked=""></label><br>
+					<label>Белый<input type="checkbox" name="white"></label><br>
+					<label>Синий<input type="checkbox" name="blue" checked=""></label><br>
+					<label>Красный<input type="checkbox" name="red" checked=""></label><br>
+					<label>Розовый<input type="checkbox" name="pink"></label>
+				</fieldset>
 			</form>
+
 			<form>
-				<p>
-					Bluetooth
-				</p>
-				<p>
-					<input type="radio" name="bluetooth" value="yes">Есть<br>
-					<input type="radio" name="bluetooth" value="no">Нет<br>
-				</p>
+				<fieldset>
+					<legend>Bluetooth</legend>
+					<label>Есть<input type="radio" name="bluetooth" value="yes"></label><br>
+					<label>Нет<input type="radio" name="bluetooth" value="no"></label>
+				</fieldset>
 			</form>
+
 			<button>
 				ПОКАЗАТЬ
 			</button>
-		</aside>
+		</section>
 
-		<ul>
-			<li>
-				<ul>
-					<li>
-						<img src="https://via.placeholder.com/150x150" alt="Любительская селфи-палка">
-					</li>
-					<li>
-						<p>
-							Любительская селфи-палка <span>500 руб.</span>
-						</p>
-					</li>
+		<div>
+			<img src="https://via.placeholder.com/150x150" alt="Любительская селфи-палка">
+			<h4>
+				<a href="#!">
+					Любительская селфи-палка <span>500 руб.</span>
+				</a>
+			</h4>
+		</div>
 
-				</ul>
-			</li>
+		<div>
+			<img src="https://via.placeholder.com/150x150" alt="Профессиональная селфи-палка">
+			<h4>
+				<a href="#!">
+					Профессиональная селфи-палка <span>1500 руб.</span>
+				</a>
+			</h4>
+		</div>
 
-			<li>
-				<ul>
-					<li>
-						<img src="https://via.placeholder.com/150x150" alt="Профессиональная селфи-палка">
-					</li>
-					<li>
-						<p>
-							Профессиональная селфи-палка <span>1500 руб.</span>
-						</p>
-					</li>
-				</ul>
-			</li>
+		<div>
+			<img src="https://via.placeholder.com/150x150" alt="Непотопляемая селфи-палка">
+			<h4>
+				<a href="#!">
+					Непотопляемая селфи-палка <span>2500 руб.</span>
+				</a>
+			</h4>
+		</div>	
 
-			<li>
-				<ul>
-					<li>
-						<img src="https://via.placeholder.com/150x150" alt="Непотопляемая селфи-палка">
-					</li>
-					<li>
-						<p>
-							Непотопляемая селфи-палка <span>2500 руб.</span>
-						</p>
-					</li>
-				</ul>
-			</li>
-
-			<li>
-				<ul>
-					<li>
-						<img src="https://via.placeholder.com/150x150" alt="Селфи-палка Следуй за мной">
-					</li>
-					<li>
-						<p>
-							Селфи-палка "Следуй за мной" <span>4900 руб.</span>
-						</p>
-					</li>
-				</ul>
-			</li>
-		</ul>
-
+		<div>
+			<img src="https://via.placeholder.com/150x150" alt="Селфи-палка Следуй за мной">
+			<h4>
+				<a href="#!">
+					Селфи-палка "Следуй за мной" <span>4900 руб.</span>
+				</a>
+			</h4>
+		</div>	
 	</main>
 	<footer>
 		<nav>
