--- a/monopod.html
+++ b/monopod.html
@@ -7,31 +7,30 @@
   <body>
 
 	<header>
-		<nav>
-			<a href="index.html">
-				<img src="https://via.placeholder.com/150x150" alt="Логотип Device">
+		<a href="index.html">
+			<img src="https://via.placeholder.com/150x150" alt="Логотип Device">
+		</a>
+
+		<form action="">
+			<input placeholder="Поиск по сайту" type="search">
+			<button type="submit">Поиск</button>
+		</form>
+		<div>
+			<a href="">
+				Войти
 			</a>
 
-			<form action="">
-				<input placeholder="Поиск по сайту" type="search">
-				<button type="submit">Поиск</button>
-			</form>
-			
-				<a href="">
-					Войти
-				</a>
+			<a href="">
+				Сравнить
+			</a>
 
-				<a href="">
-					Сравнить
-				</a>
+			<a href="">
+				Корзина
+			</a>
+		</div>
 
-				<a href="">
-					Корзина
-				</a>
-
+		<nav>
 			<ul>
-				<!-- Пишу капслоком, прямо как в макете, но как я понимаю,
-				что настоящая реализация будет через стили и Апперкейс? -->
 				<li>
 					<a href="catalog.html">
 						КАТАЛОГ ТОВАРОВ
