Вторая редакция правок

--- a/monopod.html
+++ b/monopod.html
@@ -33,26 +33,25 @@
 			<ul>
 				<li>
 					<a href="catalog.html">
-						КАТАЛОГ ТОВАРОВ
-					</a>
-					<input type="button">
+						Каталог товаров
+					</a>					
 				</li>
 
 				<li>
 					<a href="delivery.html">
-						ДОСТАВКА
+						Доставка
 					</a>
 				</li>
 
 				<li>
 					<a href="warranty.html">
-						ГАРАНТИЯ
+						Гарантия
 					</a>
 				</li>
 
 				<li>
 					<a href="contacts.html">
-						КОНТАКТЫ
+						Контакты
 					</a>
 				</li>
 			</ul>
@@ -111,7 +110,7 @@
 			</form>
 
 			<button>
-				ПОКАЗАТЬ
+				Показать
 			</button>
 		</section>
 
@@ -151,30 +150,32 @@
 			</h4>
 		</div>	
 	</main>
-	<footer>
-		<nav>
+		<footer>
+		<div>
 			<a href="index.html"><img src="https://via.placeholder.com/150x150" alt=""></a>
 
 			<address>
 				г. Москва, ул. Строителей, 15
 			</address>
+		</div>
 
+		<div>
 			<ul>
 				<li>
 					<a href="delivery.html">
-						ДОСТАВКА		
+						Доставка		
 					</a>
 				</li>
 
 				<li>
 					<a href="warranty.html">
-						ГАРАНТИЯ
+						Гарантия
 					</a>
 				</li>
 
 				<li>
 					<a href="contacts.html">
-						КОНТАКТЫ
+						Контакты
 					</a>
 				</li>
 			</ul>
@@ -198,7 +199,9 @@
 					</a>
 				</li>
 			</ul>
+		</div>
 
+		<div>
 			<a href="">
 				Войти
 			</a>
@@ -213,13 +216,12 @@
 
 			<a href="tel:+74954959595">
 				+7 (495) 495-95-95
-				<!-- Добавил здесь кликабельный телефон, так как посчитал, что вроде это уже норма?) -->
 			</a>
 
 			<a href="https://htmlacademy.ru">
 				<img src="https://via.placeholder.com/150x150" alt="Перейти на сайт Академии">
 			</a>
-		</nav>
+		</div>
 	</footer>
 
 
