--- a/index.html
+++ b/index.html
@@ -32,26 +32,25 @@
 
 				<li>
 					<a href="catalog.html">
-						каталог товаров
+						Каталог товаров
 					</a>
-					<input type="button">
 				</li>
 
 				<li>
 					<a href="delivery.html">
-						доставка
+						Доставка
 					</a>
 				</li>
 
 				<li>
 					<a href="warranty.html">
-						гарантия
+						Гарантия
 					</a>
 				</li>
 
 				<li>
 					<a href="contacts.html">
-						контакты
+						Контакты
 					</a>
 				</li>
 			</ul>
@@ -83,10 +82,7 @@
 			</ul>
 
 			<a href="#!">
-				<p>
-					<input type="button" value="подробнее о нас">
-
-				</p>
+				Подробнее о нас
 			</a>
 		</section>
 
@@ -100,13 +96,12 @@
 				проверить работоспособность покупки. Всякое бывает.
 			</p>
 
-			<img src="https://via.placeholder.com/150x150" alt="Карта">
-			
 			<a href="#!">
-				<p>
-					<input type="button" value="напишите нам">
+				<img src="https://via.placeholder.com/150x150" alt="Карта">
+			</a>
 
-				</p>
+			<a href="#!">
+				Напишите нам
 			</a>
 
 		</section>
@@ -125,19 +120,19 @@
 			<ul>
 				<li>
 					<a href="delivery.html">
-						ДОСТАВКА		
+						Доставка		
 					</a>
 				</li>
 
 				<li>
 					<a href="warranty.html">
-						ГАРАНТИЯ
+						Гарантия
 					</a>
 				</li>
 
 				<li>
 					<a href="contacts.html">
-						КОНТАКТЫ
+						Контакты
 					</a>
 				</li>
 			</ul>
@@ -178,7 +173,6 @@
 
 			<a href="tel:+74954959595">
 				+7 (495) 495-95-95
-				<!-- Добавил здесь кликабельный телефон, так как посчитал, что вроде это уже норма?) -->
 			</a>
 
 			<a href="https://htmlacademy.ru">
