--- a/monopod.html
+++ b/monopod.html
@@ -90,14 +90,56 @@
 		</section>
 
 		<section>
+			<h4>
+				Фильтр:
+			</h4>
+
 			<form>
 				<fieldset>
-					<legend>Цвет</legend>
-					<label>Черный<input type="checkbox" name="black" checked=""></label><br>
-					<label>Белый<input type="checkbox" name="white"></label><br>
-					<label>Синий<input type="checkbox" name="blue" checked=""></label><br>
-					<label>Красный<input type="checkbox" name="red" checked=""></label><br>
-					<label>Розовый<input type="checkbox" name="pink"></label>
+					<legend>
+						Стоимость
+					</legend>
+
+					<label>
+						от 0
+					</label>
+
+					<label>
+						до 5000
+					</label>					
+				</fieldset>	
+			</form>
+
+			<form>
+				<fieldset>
+					<legend>
+						Цвет
+					</legend>
+
+					<label>
+						Черный
+							<input type="checkbox" name="black" checked="">
+					</label><br>
+
+					<label>
+						Белый
+							<input type="checkbox" name="white">
+					</label><br>
+
+					<label>
+						Синий
+							<input type="checkbox" name="blue" checked="">
+					</label><br>
+
+					<label>
+						Красный
+							<input type="checkbox" name="red" checked="">
+					</label><br>
+
+					<label>
+						Розовый
+							<input type="checkbox" name="pink">
+					</label>
 				</fieldset>
 			</form>
 
@@ -112,6 +154,18 @@
 			<button>
 				Показать
 			</button>
+		</section>
+
+		<section>
+			<h4>
+				Сортировка:
+			</h4>
+
+			<ul>
+				<li><button>По цене</button></li>
+				<li><button>По типу</button></li>
+				<li><button>По популярности</button></li>			
+			</ul>
 		</section>
 
 		<div>
@@ -148,7 +202,29 @@
 					Селфи-палка "Следуй за мной" <span>4900 руб.</span>
 				</a>
 			</h4>
-		</div>	
+		</div>
+
+		<div>
+			<a href="#!">
+				Назад
+			</a>	
+
+			<a href="#!">
+				1
+			</a>
+
+			<a href="#!">
+				2
+			</a>
+
+			<a href="#!">
+				3
+			</a>
+
+			<a href="#!">
+				Вперед
+			</a>
+		</div>
 	</main>
 		<footer>
 		<div>
