--- a/index.html
+++ b/index.html
@@ -62,8 +62,159 @@
 			Интернет-магазин Device
 		</h1>
 
+		<div>
+			<a href="#!"><img src="https://via.placeholder.com/150x150" alt="Самая лучшая селфи палка"></a>
+
+			<h2>
+				Делай селфи,<br>
+				как Бен Стиллер
+			</h2>
+
+			<p>
+				Самая длинная палка для селфи доступна в нашем магазине.<br>
+				Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
+			</p>
+
+			<a href="#!">
+				Подробнее
+			</a>
+
+			<ul>
+				<li>
+					8,5 м
+				</li>
+
+				<li>
+					<span>
+						Длина палки
+					</span>
+				</li>
+			</ul>
+
+			<ul>
+				<li>
+					5 кг
+				</li>
+
+				<li>
+					<span>
+						Вес палки
+					</span>
+				</li>
+			</ul>
+
+			<ul>
+				<li>
+					Карбон
+				</li>
+
+				<li>
+					<span>
+						Материал
+					</span>
+				</li>
+			</ul>
+		</div>
+
+		<div>
+			<ul>
+				<li>
+					<a href="#!">
+						<img src="https://via.placeholder.com/150x150" alt="Виртуальная реальность">
+					</a>
+					<a href="#!">
+						<p>
+							Виртуальная реальность
+						</p>
+					</a>
+				</li>
+
+				<li>
+					<a href="#!">
+						<img src="https://via.placeholder.com/150x150" alt="Моноподы для селфи">
+					</a>
+					<a href="#!">
+						<p>
+							Моноподе для селфи
+						</p>
+					</a>
+				</li>
+
+				<li>
+					<a href="#!">
+						<img src="https://via.placeholder.com/150x150" alt="Экшн-камеры">
+					</a>
+					<a href="#!">
+						<p>
+							Экшн-камеры
+						</p>
+					</a>
+				</li>
+
+				<li>
+					<a href="#!">
+						<img src="https://via.placeholder.com/150x150" alt="Фитнес-браслеты">
+					</a>
+					<a href="#!">
+						<p>
+							Фитнес-браслеты
+						</p>
+					</a>
+				</li>
+
+				<li>
+					<a href="#!">
+						<img src="https://via.placeholder.com/150x150" alt="Умные часы">
+					</a>
+					<a href="#!">
+						<p>
+							Умные часы
+						</p>
+					</a>
+				</li>
+
+				<li>
+					<a href="#!">
+						<img src="https://via.placeholder.com/150x150" alt="Квадрокоптеры">
+					</a>
+					<a href="#!">
+						<p>
+							Квадрокоптеры
+						</p>
+					</a>
+				</li>
+			</ul>	
+		</div>
+
 		<section>
-			<h2>О нас</h2>
+			<h2>
+				Доставка
+			</h2>
+
+			<p>
+				Мы с удовольствием доставим ваш товар прямо к вашему<br>
+				подъезду совершенно бесплатно! Ведь мы неплохо<br>
+				заработаем, поднимая его на ваш этаж.
+			</p>
+
+			<ul>
+				<li>Доставка</li>
+				<li>Гарантия</li>
+				<li>Кредит</li>
+			</ul>
+		</section>
+		
+		<div>
+			<img src="https://via.placeholder.com/150x150" alt="DJI Логотип">
+			<img src="https://via.placeholder.com/150x150" alt="SpGadjets Логотип">	
+			<img src="https://via.placeholder.com/150x150" alt="GoPro Логотип">
+			<img src="https://via.placeholder.com/150x150" alt="Vive Логотип">
+		</div>
+
+		<section>
+			<h2>
+				О нас
+			</h2>
 
 			<p>
 				Огромный выбор гаджетов не оставит равнодушным гика,<br>
