--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		</h1>
 
 		<div>
-			<a href="#!"><img src="https://via.placeholder.com/150x150" alt="Самая лучшая селфи палка"></a>
+			<img src="https://via.placeholder.com/150x150" alt="Самая лучшая селфи палка">
 
 			<h2>
 				Делай селфи,<br>
@@ -79,136 +79,120 @@
 				Подробнее
 			</a>
 
-			<ul>
-				<li>
-					8,5 м
-				</li>
 
-				<li>
-					<span>
-						Длина палки
-					</span>
-				</li>
-			</ul>
+			<table>
+				<tr>
+					<td>8,5 м</td>
+					<td>5 кг</td>
+					<td>Карбон</td>
+				</tr>
 
-			<ul>
-				<li>
-					5 кг
-				</li>
-
-				<li>
-					<span>
-						Вес палки
-					</span>
-				</li>
-			</ul>
-
-			<ul>
-				<li>
-					Карбон
-				</li>
-
-				<li>
-					<span>
-						Материал
-					</span>
-				</li>
-			</ul>
+				<tr>
+					<td>Длина палки</td>
+					<td>Вес палки</td>
+					<td>Материал</td>
+				</tr>
+			</table>
 		</div>
 
 		<div>
 			<ul>
 				<li>
 					<a href="#!">
-						<img src="https://via.placeholder.com/150x150" alt="Виртуальная реальность">
-					</a>
-					<a href="#!">
-						<p>
-							Виртуальная реальность
-						</p>
+						Виртуальная реальность
 					</a>
 				</li>
 
 				<li>
 					<a href="#!">
-						<img src="https://via.placeholder.com/150x150" alt="Моноподы для селфи">
-					</a>
+						Моноподы для селфи
+				</li>
+
+				<li>
 					<a href="#!">
-						<p>
-							Моноподе для селфи
-						</p>
+						Экшн-камеры
+					</a>					
+				</li>
+
+				<li>
+					<a href="#!">
+						Фитнес-браслеты
 					</a>
 				</li>
 
 				<li>
 					<a href="#!">
-						<img src="https://via.placeholder.com/150x150" alt="Экшн-камеры">
-					</a>
-					<a href="#!">
-						<p>
-							Экшн-камеры
-						</p>
+						Умные часы
 					</a>
 				</li>
 
 				<li>
 					<a href="#!">
-						<img src="https://via.placeholder.com/150x150" alt="Фитнес-браслеты">
-					</a>
-					<a href="#!">
-						<p>
-							Фитнес-браслеты
-						</p>
-					</a>
-				</li>
-
-				<li>
-					<a href="#!">
-						<img src="https://via.placeholder.com/150x150" alt="Умные часы">
-					</a>
-					<a href="#!">
-						<p>
-							Умные часы
-						</p>
-					</a>
-				</li>
-
-				<li>
-					<a href="#!">
-						<img src="https://via.placeholder.com/150x150" alt="Квадрокоптеры">
-					</a>
-					<a href="#!">
-						<p>
-							Квадрокоптеры
-						</p>
+						Квадрокоптеры
 					</a>
 				</li>
 			</ul>	
 		</div>
 
 		<section>
-			<h2>
-				Доставка
-			</h2>
-
-			<p>
-				Мы с удовольствием доставим ваш товар прямо к вашему<br>
-				подъезду совершенно бесплатно! Ведь мы неплохо<br>
-				заработаем, поднимая его на ваш этаж.
-			</p>
+			<ul>
+				<li><button>Доставка</button></li>
+				<li><button>Гарантия</button></li>
+				<li><button>Кредит</button></li>
+			</ul>
 
 			<ul>
-				<li>Доставка</li>
-				<li>Гарантия</li>
-				<li>Кредит</li>
-			</ul>
+				<li>
+					<h2>
+						Доставка
+					</h2>
+
+					<p>
+						Мы с удовольствием доставим ваш товар прямо к вашему<br>
+						подъезду совершенно бесплатно! Ведь мы неплохо<br>
+						заработаем, поднимая его на ваш этаж.							
+					</p>
+				</li>
+				<li>
+					<h2>
+						Гарантия
+					</h2>
+
+					<p>
+						Мы с удовольствием гарантируем ваш товар для вас<br>
+						совершенно бесплатно! Ведь мы неплохо<br>
+						заработаем на вас.							
+					</p>					
+				</li>
+			</ul>	
 		</section>
 		
 		<div>
-			<img src="https://via.placeholder.com/150x150" alt="DJI Логотип">
-			<img src="https://via.placeholder.com/150x150" alt="SpGadjets Логотип">	
-			<img src="https://via.placeholder.com/150x150" alt="GoPro Логотип">
-			<img src="https://via.placeholder.com/150x150" alt="Vive Логотип">
+			<ul>
+				<li>
+					<a href="#!">
+						<img src="https://via.placeholder.com/150x150" alt="DJI Логотип">
+					</a>
+				</li>
+
+				<li>
+					<a href="#!">
+						<img src="https://via.placeholder.com/150x150" alt="SpGadjets Логотип">
+					</a>
+				</li>
+
+				<li>
+					<a href="#!">
+						<img src="https://via.placeholder.com/150x150" alt="GoPro Логотип">
+					</a>
+				</li>
+
+				<li>
+					<a href="#!">
+						<img src="https://via.placeholder.com/150x150" alt="Vive Логотип">
+					</a>
+				</li>
+			</ul>
 		</div>
 
 		<section>
@@ -331,6 +315,5 @@
 			</a>
 		</div>
 	</footer>
-
   </body>
 </html>
