--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<header>
 			<a href="index.html">
-				<img src="https://via.placeholder.com/150x150" alt="Логотип Device">
+				<img src="img/logo-device.svg" alt="Логотип Device" width="163px" height="35px">
 			</a>
 
 			<form action="">
@@ -164,6 +164,18 @@
 						заработаем на вас.							
 					</p>					
 				</li>
+
+				<li>
+					<h2>
+						Кредит
+					</h2>
+
+					<p>
+						Мы с удовольствием прокредитуем ваш товар для вас<br>
+						совершенно бесплатно! Ведь мы неплохо<br>
+						заработаем на вас.							
+					</p>					
+				</li>
 			</ul>	
 		</section>
 		
@@ -171,25 +183,25 @@
 			<ul>
 				<li>
 					<a href="#!">
-						<img src="https://via.placeholder.com/150x150" alt="DJI Логотип">
+						<img src="img/dji-logo.svg" alt="DJI Логотип" width="260px" height="100px">
 					</a>
 				</li>
 
 				<li>
 					<a href="#!">
-						<img src="https://via.placeholder.com/150x150" alt="SpGadjets Логотип">
+						<img src="img/spgadjects-logo.svg" alt="SpGadjets Логотип" width="260px" height="100px">
 					</a>
 				</li>
 
 				<li>
 					<a href="#!">
-						<img src="https://via.placeholder.com/150x150" alt="GoPro Логотип">
+						<img src="img/gopro-logo.svg" alt="GoPro Логотип" width="260px" height="100px">
 					</a>
 				</li>
 
 				<li>
 					<a href="#!">
-						<img src="https://via.placeholder.com/150x150" alt="Vive Логотип">
+						<img src="img/vive-logo.svg" alt="Vive Логотип" width="260px" height="100px">
 					</a>
 				</li>
 			</ul>
@@ -232,7 +244,7 @@
 			</p>
 
 			<a href="#!">
-				<img src="https://via.placeholder.com/150x150" alt="Карта">
+				<img src="img/map.png" alt="Карта офиса ул. Строителей 15" width="560px" height="222px">
 			</a>
 
 			<a href="#!">
@@ -244,7 +256,9 @@
 
 	<footer>
 		<div>
-			<a href="index.html"><img src="https://via.placeholder.com/150x150" alt=""></a>
+			<a href="index.html">
+				<img src="img/logo-device.svg" alt="Логотип Device" width="163px" height="35px">
+			</a>
 
 			<address>
 				г. Москва, ул. Строителей, 15
@@ -310,8 +324,8 @@
 				+7 (495) 495-95-95
 			</a>
 
-			<a href="https://htmlacademy.ru">
-				<img src="https://via.placeholder.com/150x150" alt="Перейти на сайт Академии">
+			<a href="https://htmlacademy.ru/intensive/htmlcss">
+				<img src="img/logo-html.svg" alt="Перейти на сайт Академии" width="27px" height="34px">
 			</a>
 		</div>
 	</footer>
