--- a/monopod.html
+++ b/monopod.html
@@ -8,7 +8,7 @@
 
 	<header>
 		<a href="index.html">
-			<img src="https://via.placeholder.com/150x150" alt="Логотип Device">
+			<img src="img/logo-device.svg" alt="Логотип Device" width="163px" height="35px">
 		</a>
 
 		<form action="">
@@ -176,7 +176,7 @@
 		</section>
 
 		<div>
-			<img src="https://via.placeholder.com/150x150" alt="Любительская селфи-палка">
+			<img src="img/item1.jpg" alt="Любительская селфи-палка" width="360px" height="380px">
 			<h4>
 				<a href="#!">
 					Любительская селфи-палка <span>500 руб.</span>
@@ -185,7 +185,7 @@
 		</div>
 
 		<div>
-			<img src="https://via.placeholder.com/150x150" alt="Профессиональная селфи-палка">
+			<img src="img/item2.jpg" alt="Профессиональная селфи-палка" width="360px" height="380px">
 			<h4>
 				<a href="#!">
 					Профессиональная селфи-палка <span>1500 руб.</span>
@@ -194,7 +194,7 @@
 		</div>
 
 		<div>
-			<img src="https://via.placeholder.com/150x150" alt="Непотопляемая селфи-палка">
+			<img src="img/item3.jpg" alt="Непотопляемая селфи-палка" width="360px" height="380px">
 			<h4>
 				<a href="#!">
 					Непотопляемая селфи-палка <span>2500 руб.</span>
@@ -203,7 +203,7 @@
 		</div>	
 
 		<div>
-			<img src="https://via.placeholder.com/150x150" alt="Селфи-палка Следуй за мной">
+			<img src="img/item4.jpg" alt="Селфи-палка Следуй за мной" width="360px" height="380px">
 			<h4>
 				<a href="#!">
 					Селфи-палка "Следуй за мной" <span>4900 руб.</span>
@@ -247,7 +247,9 @@
 	</main>
 		<footer>
 		<div>
-			<a href="index.html"><img src="https://via.placeholder.com/150x150" alt=""></a>
+			<a href="index.html">
+				<img src="img/logo-device.svg" alt="Логотип Device" width="163px" height="35px">
+			</a>
 
 			<address>
 				г. Москва, ул. Строителей, 15
@@ -314,7 +316,7 @@
 			</a>
 
 			<a href="https://htmlacademy.ru">
-				<img src="https://via.placeholder.com/150x150" alt="Перейти на сайт Академии">
+				<img src="img/logo-html.svg" alt="Перейти на сайт Академии" width="27px" height="34px"
 			</a>
 		</div>
 	</footer>
