--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		</h1>
 
 		<div>
-			<img src="https://via.placeholder.com/150x150" alt="Самая лучшая селфи палка">
+			<img src="img/slider1.png" alt="Самая лучшая селфи палка">
 
 			<h2>
 				Делай селфи,<br>
