--- a/index.html
+++ b/index.html
@@ -283,18 +283,18 @@
 				<form action="echo.htmlacademy.ru" method="post">
 					<label>
 						Ваше имя:
-						<input type="text" placeholder="Имя Фамилия" autofocus>
+						<input type="text" name="username" placeholder="Имя Фамилия" autofocus required>
 					</label>
 
 					<label>
 						Ваш e-mail:
-						<input type="e-mail" placeholder="email@example.com" required>
+						<input type="e-mail" name="email" placeholder="email@example.com" required>
 					</label>
 
 					<label for="comment-in-form">
 						Текст письма
 					</label>
-					<textarea name="comment-in-form" id="comment-in-form" cols="30" rows="5" placeholder="В свободной форме"></textarea>
+					<textarea name="comment-in-form" id="comment-in-form" cols="30" rows="5" placeholder="В свободной форме" required></textarea>
 
 					<input type="submit" name="send-form" value="Отправить" aria-label="Отправить">
 
