Правка по разметке

--- a/catalog.html
+++ b/catalog.html
@@ -12,26 +12,20 @@
 
 			<form action="echo.htmlacademy.ru" method="get" aria-label="Поисковая строка">
 					<input type="search" placeholder="Поиск по сайту" aria-label="Поле для поиска">
-					<input type="submit" value="Поиск" aria-label="Поиск">
+					<button type="submit" aria-label="Поиск">Поиск</button>
 			</form>
 			
-			<div>
 				<a href="#" aria-label="Войти в личный кабинет">
 					Войти
 				</a>
-			</div>
 
-			<div>
 				<a href="#" aria-label="Сравнить товары">
 					Сравнить
 				</a>
-			</div>
 
-			<div>
 				<a href="#" aria-label="Корзина">
 					Корзина
 				</a>
-			</div>
 		<nav>
 			<ul>
 				<li>
@@ -39,23 +33,15 @@
 						Каталог товаров	
 					</a>
 
-					<table class="visually-hidden">
-						<tr>
-							<td><a href="#" aria-label="Виртуальная реальность">Виртуальная реальность</a></td>
-							<td><a href="#" aria-label="Фитнес-браслеты">Фитнес-браслеты</a></td>
-							<td><a href="#" aria-label="Квадрокоптер">Квадрокоптер</a></td>
-						</tr>
-						<tr>
-							<td><a href="#" aria-label="Моноподы для селфи">Моноподы для селфи</a></td>
-							<td><a href="#" aria-label="Умные часы">Умные часы</a></td>
-							<td></td>
-						</tr>
-						<tr>
-							<td><a href="#" aria-label="Экшн камеры">Экшн камеры</a></td>
-							<td></td>
-							<td></td>
-						</tr>
-					</table>		
+					<ul class="visually-hidden">
+						
+						<li><a href="#" aria-label="Виртуальная реальность">Виртуальная реальность</a></li>
+						<li><a href="#" aria-label="Фитнес-браслеты">Фитнес-браслеты</a></li>
+						<li><a href="#" aria-label="Квадрокоптер">Квадрокоптер</a></li>
+						<li><a href="#" aria-label="Моноподы для селфи">Моноподы для селфи</a></li>
+						<li><a href="#" aria-label="Умные часы">Умные часы</a></li>
+						<li><a href="#" aria-label="Экшн камеры">Экшн камеры</a></li>
+				</ul>		
 				</li>
 
 				<li>
@@ -169,8 +155,10 @@
 
 				<fieldset>
 					<legend>Bluetooth</legend>
-					<label>Есть<input type="radio" name="bluetooth" value="yes"></label><br>
-					<label>Нет<input type="radio" name="bluetooth" value="no"></label>
+					<ul>
+					<li><label>Есть<input type="radio" name="bluetooth" value="yes"></label></li>
+					<li><label>Нет<input type="radio" name="bluetooth" value="no"></label></li>
+					</ul>
 				</fieldset>
 
 				<button type="submit">Показать</button>
@@ -200,12 +188,12 @@
 			</h4>
 
 			<div class="visually-hidden">
-				<button type="submit" aria-label="Добавить товар в корзину">
+				<a href="#" aria-label="Добавить товар в корзину">
 					В корзину
-				</button>
-				<button type="submit" aria-label="Добавить товар для сравнения">
+				</a>
+				<a href="#" aria-label="Добавить товар для сравнения">
 					Добавить к сравнению
-				</button>
+				</a>
 			</div>
 		</div>
 
@@ -218,12 +206,12 @@
 			</h4>
 
 			<div class="visually-hidden">
-				<button type="submit" aria-label="Добавить товар в корзину">
+				<a href="#" aria-label="Добавить товар в корзину">
 					В корзину
-				</button>
-				<button type="submit" aria-label="Добавить товар для сравнения">
+				</a>
+				<a href="#" aria-label="Добавить товар для сравнения">
 					Добавить к сравнению
-				</button>
+				</a>
 			</div>
 		</div>
 
@@ -236,12 +224,12 @@
 			</h4>
 
 			<div class="visually-hidden">
-				<button type="submit" aria-label="Добавить товар в корзину">
+				<a href="#" aria-label="Добавить товар в корзину">
 					В корзину
-				</button>
-				<button type="submit" aria-label="Добавить товар для сравнения">
+				</a>
+				<a href="#" aria-label="Добавить товар для сравнения">
 					Добавить к сравнению
-				</button>
+				</a>
 			</div>
 		</div>	
 
@@ -254,12 +242,12 @@
 			</h4>
 
 			<div class="visually-hidden">
-				<button type="submit" aria-label="Добавить товар в корзину">
+				<a href="#" aria-label="Добавить товар в корзину">
 					В корзину
-				</button>
-				<button type="submit" aria-label="Добавить товар для сравнения">
+				</a>
+				<a href="#" aria-label="Добавить товар для сравнения">
 					Добавить к сравнению
-				</button>
+				</a>
 			</div>
 		</div>
 
