Правки Базовая стилизация

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
-	<header class="header">
+		<header class="header">
 		<a class="logo" href="index.html" aria-label="На главную страницу">
 			<img src="img/logo-device.svg" alt="Логотип компании Device" width="163px" height="35px">
 		</a>
@@ -36,7 +36,7 @@
 		</a>
 
 		<nav class="nav-main">
-			<ul>
+			<ul class="list-nav-main">
 				<li>
 					<a class="a-link-hover a-link-focus a-link-active" href="#" aria-label="Каталог товаров">
 						Каталог товаров	
@@ -131,7 +131,7 @@
 
 		<section>
 			<form action="echo.htmlacademy.ru" method="get">
-				<h4>
+				<h4 class="subtitle-section">
 					Фильтр:
 				</h4>
 
@@ -199,7 +199,7 @@
 		</section>
 
 		<section>
-			<h4>
+			<h4 class="subtitle-section">
 				Сортировка:
 			</h4>
 
@@ -331,7 +331,7 @@
 		</div>
 
 		<div>
-			<ul>
+			<ul class="list-nav-footer">
 				<li>
 					<a class="a-link-hover a-link-active a-link-focus" href="#" aria-label="Доставка">
 						<span class="nav-list-footer">Доставка</span>	
@@ -351,7 +351,7 @@
 				</li>
 			</ul>
 
-			<ul>
+			<ul class="list-smm">
 				<li>
 					<a href="#" aria-label="Facebook">
 						Facebook
