--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</a>
 
 		<nav class="nav-main">
-			<ul>
+			<ul class="list-nav-main">
 				<li>
 					<a class="a-link-hover a-link-focus a-link-active" href="#" aria-label="Каталог товаров">
 						Каталог товаров	
@@ -106,7 +106,7 @@
 		<div>
 			<img src="img/slider1.png" alt="Самая лучшая селфи палка">
 
-			<h2>
+			<h2 class="title-section">
 				Делай селфи,<br>
 				как Бен Стиллер
 			</h2>
@@ -184,15 +184,15 @@
 		</div>
 
 		<section>
-			<ul>
+			<ul class="list-slider-button">
 				<li><button class="button-type-slider" aria-label="Доставка">Доставка</button></li>
 				<li><button class="button-type-slider" aria-label="Гарантия">Гарантия</button></li>
 				<li><button class="button-type-slider" aria-label="Кредит">Кредит</button></li>
 			</ul>
 
-			<ul>
+			<ul class="list-slider-text">
 				<li>
-					<h2>
+					<h2 class="title-section">
 						Доставка
 					</h2>
 
@@ -203,7 +203,7 @@
 					</p>
 				</li>
 				<li class="visually-hidden">
-					<h2>
+					<h2 class="title-section">
 						Гарантия
 					</h2>
 
@@ -215,7 +215,7 @@
 				</li>
 
 				<li class="visually-hidden">
-					<h2>
+					<h2 class="title-section">
 						Кредит
 					</h2>
 
@@ -229,7 +229,7 @@
 		</section>
 		
 		<div>
-			<ul>
+			<ul class="list-partner-companies">
 				<li>
 					<a href="#" aria-label="Компания DJI">
 						<img src="img/dji-logo.svg" alt="DJI Логотип" width="260px" height="100px">
@@ -257,7 +257,7 @@
 		</div>
 
 		<section>
-			<h2>
+			<h2 class="title-section">
 				О нас
 			</h2>
 
@@ -283,7 +283,7 @@
 		</section>
 
 		<section>
-			<h2>
+			<h2 class="title-section">
 				Контакты
 			</h2>
 
@@ -342,7 +342,7 @@
 		</div>
 
 		<div>
-			<ul>
+			<ul class="list-nav-footer">
 				<li>
 					<a class="a-link-hover a-link-active a-link-focus" href="#" aria-label="Доставка">
 						<span class="nav-list-footer">Доставка</span>	
@@ -362,7 +362,7 @@
 				</li>
 			</ul>
 
-			<ul>
+			<ul class="list-smm">
 				<li>
 					<a href="#" aria-label="Facebook">
 						Facebook
